adicionei a avaliação com lighthouse

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Lista de usuários"/>
+    <meta name="keywords" content="Usuários, Lista"/>
     <title>Lista de itens</title>
   </head>
   <body>
